@@ -798,8 +798,8 @@ gpointer launch_player(gpointer data)
     }
 
     if (vo != NULL && g_ascii_strncasecmp(vo, "xvmc", strlen("xvmc")) == 0) {
-        if (g_strncasecmp(threaddata->filename, "dvd://", strlen("dvd://")) == 0
-            || g_strncasecmp(threaddata->filename, "dvdnav://", strlen("dvdnav://")) == 0) {
+        if (g_ascii_strncasecmp(threaddata->filename, "dvd://", strlen("dvd://")) == 0
+            || g_ascii_strncasecmp(threaddata->filename, "dvdnav://", strlen("dvdnav://")) == 0) {
             argv[arg++] = g_strdup_printf("-vc");
             argv[arg++] = g_strdup_printf("ffmpeg12mc");
         } else {
@@ -878,7 +878,7 @@ gpointer launch_player(gpointer data)
         argv[arg++] = g_strdup_printf("-mouse-movements");
         argv[arg++] = g_strdup_printf("-nocache");
     } else {
-        if (g_strncasecmp(threaddata->filename, "dvd://", strlen("dvd://")) == 0) {
+        if (g_ascii_strncasecmp(threaddata->filename, "dvd://", strlen("dvd://")) == 0) {
             // argv[arg++] = g_strdup_printf("-nocache");
         } else {
             argv[arg++] = g_strdup_printf("-nomouseinput");
